[type-classes] Revert merge from lworld