@@ -1,6 +1,5 @@
 /*
- * Copyright (c) 2024, 2026, Oracle and/or its affiliates. All rights reserved.
- * Copyright 2026 Arm Limited and/or its affiliates.
+ * Copyright (c) 2024, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,27 +23,24 @@
 
 /*
  * @test id=no-vectorization
- * @bug 8340093 8342095
+ * @bug 8340093
  * @summary Test vectorization of reduction loops.
- * @modules jdk.incubator.vector
  * @library /test/lib /
  * @run driver compiler.loopopts.superword.TestReductions P0
  */
 
 /*
  * @test id=vanilla
- * @bug 8340093 8342095 8381617
+ * @bug 8340093
  * @summary Test vectorization of reduction loops.
- * @modules jdk.incubator.vector
  * @library /test/lib /
  * @run driver compiler.loopopts.superword.TestReductions P1
  */
 
 /*
  * @test id=force-vectorization
- * @bug 8340093 8342095 8381617
+ * @bug 8340093
  * @summary Test vectorization of reduction loops.
- * @modules jdk.incubator.vector
  * @library /test/lib /
  * @run driver compiler.loopopts.superword.TestReductions P2
  */
@@ -54,14 +50,10 @@ package compiler.loopopts.superword;
 import java.util.Map;
 import java.util.HashMap;
 
-import jdk.incubator.vector.Float16;
-
 import compiler.lib.ir_framework.*;
 import compiler.lib.verify.*;
 import static compiler.lib.generators.Generators.G;
 import compiler.lib.generators.Generator;
-import static java.lang.Float.floatToFloat16;
-import static jdk.incubator.vector.Float16.*;
 
 /**
  * Note: there is a corresponding JMH benchmark:
@@ -73,7 +65,6 @@ public class TestReductions {
     private static final Generator<Long>    GEN_L = G.longs();
     private static final Generator<Float>   GEN_F = G.floats();
     private static final Generator<Double>  GEN_D = G.doubles();
-    private static final Generator<Short>   GEN_F16 = G.float16s();
 
     private static byte[] in1B   = fillRandom(new byte[SIZE]);
     private static byte[] in2B   = fillRandom(new byte[SIZE]);
@@ -98,9 +89,6 @@ public class TestReductions {
     private static double[] in1D = fillRandom(new double[SIZE]);
     private static double[] in2D = fillRandom(new double[SIZE]);
     private static double[] in3D = fillRandom(new double[SIZE]);
-    private static short[] in1F16 = fillRandomFloat16(new short[SIZE]);
-    private static short[] in2F16 = fillRandomFloat16(new short[SIZE]);
-    private static short[] in3F16 = fillRandomFloat16(new short[SIZE]);
 
     interface TestFunction {
         Object run();
@@ -114,7 +102,6 @@ public class TestReductions {
 
     public static void main(String[] args) {
         TestFramework framework = new TestFramework(TestReductions.class);
-        framework.addFlags("--add-modules=jdk.incubator.vector");
         switch (args[0]) {
             case "P0" -> { framework.addFlags("-XX:+UnlockDiagnosticVMOptions", "-XX:AutoVectorizationOverrideProfitability=0"); }
             case "P1" -> { framework.addFlags("-XX:+UnlockDiagnosticVMOptions", "-XX:AutoVectorizationOverrideProfitability=1"); }
@@ -263,13 +250,6 @@ public class TestReductions {
         tests.put("doubleMinBig",        TestReductions::doubleMinBig);
         tests.put("doubleMaxBig",        TestReductions::doubleMaxBig);
 
-        tests.put("float16AddSimple",    TestReductions::float16AddSimple);
-        tests.put("float16MulSimple",    TestReductions::float16MulSimple);
-        tests.put("float16AddDotProduct", TestReductions::float16AddDotProduct);
-        tests.put("float16MulDotProduct", TestReductions::float16MulDotProduct);
-        tests.put("float16AddBig",       TestReductions::float16AddBig);
-        tests.put("float16MulBig",       TestReductions::float16MulBig);
-
         // Compute gold value for all test methods before compilation
         for (Map.Entry<String,TestFunction> entry : tests.entrySet()) {
             String name = entry.getKey();
@@ -414,14 +394,7 @@ public class TestReductions {
                  "doubleAddBig",
                  "doubleMulBig",
                  "doubleMinBig",
-                 "doubleMaxBig",
-
-                 "float16AddSimple",
-                 "float16MulSimple",
-                 "float16AddDotProduct",
-                 "float16MulDotProduct",
-                 "float16AddBig",
-                 "float16MulBig"})
+                 "doubleMaxBig"})
     public void runTests() {
         for (Map.Entry<String,TestFunction> entry : tests.entrySet()) {
             String name = entry.getKey();
@@ -480,22 +453,9 @@ public class TestReductions {
         return a;
     }
 
-    static short[] fillRandomFloat16(short[] a) {
-        for (int i = 0; i < a.length; i++) {
-            a[i] = GEN_F16.next();
-        }
-        return a;
-    }
-
     // ---------byte***Simple ------------------------------------------------------------
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE + "min(max_int, max_byte)", "> 0",
-                  IRNode.AND_REDUCTION_V, "> 0",
-                  IRNode.AND_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_B,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_B) // does not vectorize for now, might in the future.
     private static byte byteAndSimple() {
         byte acc = (byte)0xFF; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -506,13 +466,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE + "min(max_int, max_byte)", "> 0",
-                  IRNode.OR_REDUCTION_V, "> 0",
-                  IRNode.OR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_B,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_B) // does not vectorize for now, might in the future.
     private static byte byteOrSimple() {
         byte acc = 0; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -523,13 +477,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE + "min(max_int, max_byte)", "> 0",
-                  IRNode.XOR_REDUCTION_V, "> 0",
-                  IRNode.XOR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_B,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_B) // does not vectorize for now, might in the future.
     private static byte byteXorSimple() {
         byte acc = 0; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -562,13 +510,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE + "min(max_int, max_byte)", "> 0",
-                  IRNode.MIN_REDUCTION_V, "> 0",
-                  IRNode.MIN_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_B,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_B) // does not vectorize for now, might in the future.
     private static byte byteMinSimple() {
         byte acc = Byte.MAX_VALUE; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -579,13 +521,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE + "min(max_int, max_byte)", "> 0",
-                  IRNode.MAX_REDUCTION_V, "> 0",
-                  IRNode.MAX_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_B,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_B) // does not vectorize for now, might in the future.
     private static byte byteMaxSimple() {
         byte acc = Byte.MIN_VALUE; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -597,13 +533,7 @@ public class TestReductions {
 
     // ---------byte***DotProduct ------------------------------------------------------------
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE + "min(max_int, max_byte)", "> 0",
-                  IRNode.AND_REDUCTION_V, "> 0",
-                  IRNode.AND_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_B,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_B) // does not vectorize for now, might in the future.
     private static byte byteAndDotProduct() {
         byte acc = (byte)0xFF; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -614,13 +544,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE + "min(max_int, max_byte)", "> 0",
-                  IRNode.OR_REDUCTION_V, "> 0",
-                  IRNode.OR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_B,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_B) // does not vectorize for now, might in the future.
     private static byte byteOrDotProduct() {
         byte acc = 0; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -631,13 +555,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE + "min(max_int, max_byte)", "> 0",
-                  IRNode.XOR_REDUCTION_V, "> 0",
-                  IRNode.XOR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_B,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_B) // does not vectorize for now, might in the future.
     private static byte byteXorDotProduct() {
         byte acc = 0; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -670,13 +588,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE + "min(max_int, max_byte)", "> 0",
-                  IRNode.MIN_REDUCTION_V, "> 0",
-                  IRNode.MIN_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_B,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_B) // does not vectorize for now, might in the future.
     private static byte byteMinDotProduct() {
         byte acc = Byte.MAX_VALUE; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -687,13 +599,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE + "min(max_int, max_byte)", "> 0",
-                  IRNode.MAX_REDUCTION_V, "> 0",
-                  IRNode.MAX_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_B,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_B) // does not vectorize for now, might in the future.
     private static byte byteMaxDotProduct() {
         byte acc = Byte.MIN_VALUE; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -705,13 +611,7 @@ public class TestReductions {
 
     // ---------byte***Big ------------------------------------------------------------
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE + "min(max_int, max_byte)", "> 0",
-                  IRNode.AND_REDUCTION_V, "> 0",
-                  IRNode.AND_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_B,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_B) // does not vectorize for now, might in the future.
     private static byte byteAndBig() {
         byte acc = (byte)0xFF; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -722,13 +622,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE + "min(max_int, max_byte)", "> 0",
-                  IRNode.OR_REDUCTION_V, "> 0",
-                  IRNode.OR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_B,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_B) // does not vectorize for now, might in the future.
     private static byte byteOrBig() {
         byte acc = 0; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -739,13 +633,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE + "min(max_int, max_byte)", "> 0",
-                  IRNode.XOR_REDUCTION_V, "> 0",
-                  IRNode.XOR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_B,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_B) // does not vectorize for now, might in the future.
     private static byte byteXorBig() {
         byte acc = 0; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -778,13 +666,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE + "min(max_int, max_byte)", "> 0",
-                  IRNode.MIN_REDUCTION_V, "> 0",
-                  IRNode.MIN_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_B,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_B) // does not vectorize for now, might in the future.
     private static byte byteMinBig() {
         byte acc = Byte.MAX_VALUE; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -795,13 +677,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE + "min(max_int, max_byte)", "> 0",
-                  IRNode.MAX_REDUCTION_V, "> 0",
-                  IRNode.MAX_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_B,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_B) // does not vectorize for now, might in the future.
     private static byte byteMaxBig() {
         byte acc = Byte.MIN_VALUE; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -1047,13 +923,7 @@ public class TestReductions {
 
     // ---------short***Simple ------------------------------------------------------------
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_S, IRNode.VECTOR_SIZE + "min(max_int, max_short)", "> 0",
-                  IRNode.AND_REDUCTION_V, "> 0",
-                  IRNode.AND_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_S,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_S) // does not vectorize for now, might in the future.
     private static short shortAndSimple() {
         short acc = (short)0xFFFF; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -1064,13 +934,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_S, IRNode.VECTOR_SIZE + "min(max_int, max_short)", "> 0",
-                  IRNode.OR_REDUCTION_V, "> 0",
-                  IRNode.OR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_S,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_S) // does not vectorize for now, might in the future.
     private static short shortOrSimple() {
         short acc = 0; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -1081,13 +945,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_S, IRNode.VECTOR_SIZE + "min(max_int, max_short)", "> 0",
-                  IRNode.XOR_REDUCTION_V, "> 0",
-                  IRNode.XOR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_S,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_S) // does not vectorize for now, might in the future.
     private static short shortXorSimple() {
         short acc = 0; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -1120,13 +978,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_S, IRNode.VECTOR_SIZE + "min(max_int, max_short)", "> 0",
-                  IRNode.MIN_REDUCTION_V, "> 0",
-                  IRNode.MIN_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_S,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_S) // does not vectorize for now, might in the future.
     private static short shortMinSimple() {
         short acc = Short.MAX_VALUE; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -1137,13 +989,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_S, IRNode.VECTOR_SIZE + "min(max_int, max_short)", "> 0",
-                  IRNode.MAX_REDUCTION_V, "> 0",
-                  IRNode.MAX_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_S,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_S) // does not vectorize for now, might in the future.
     private static short shortMaxSimple() {
         short acc = Short.MIN_VALUE; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -1155,13 +1001,7 @@ public class TestReductions {
 
     // ---------short***DotProduct ------------------------------------------------------------
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_S, IRNode.VECTOR_SIZE + "min(max_int, max_short)", "> 0",
-                  IRNode.AND_REDUCTION_V, "> 0",
-                  IRNode.AND_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_S,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_S) // does not vectorize for now, might in the future.
     private static short shortAndDotProduct() {
         short acc = (short)0xFFFF; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -1172,13 +1012,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_S, IRNode.VECTOR_SIZE + "min(max_int, max_short)", "> 0",
-                  IRNode.OR_REDUCTION_V, "> 0",
-                  IRNode.OR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_S,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_S) // does not vectorize for now, might in the future.
     private static short shortOrDotProduct() {
         short acc = 0; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -1189,13 +1023,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_S, IRNode.VECTOR_SIZE + "min(max_int, max_short)", "> 0",
-                  IRNode.XOR_REDUCTION_V, "> 0",
-                  IRNode.XOR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_S,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_S) // does not vectorize for now, might in the future.
     private static short shortXorDotProduct() {
         short acc = 0; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -1228,13 +1056,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_S, IRNode.VECTOR_SIZE + "min(max_int, max_short)", "> 0",
-                  IRNode.MIN_REDUCTION_V, "> 0",
-                  IRNode.MIN_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_S,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_S) // does not vectorize for now, might in the future.
     private static short shortMinDotProduct() {
         short acc = Short.MAX_VALUE; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -1245,13 +1067,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_S, IRNode.VECTOR_SIZE + "min(max_int, max_short)", "> 0",
-                  IRNode.MAX_REDUCTION_V, "> 0",
-                  IRNode.MAX_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_S,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_S) // does not vectorize for now, might in the future.
     private static short shortMaxDotProduct() {
         short acc = Short.MIN_VALUE; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -1263,13 +1079,7 @@ public class TestReductions {
 
     // ---------short***Big ------------------------------------------------------------
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_S, IRNode.VECTOR_SIZE + "min(max_int, max_short)", "> 0",
-                  IRNode.AND_REDUCTION_V, "> 0",
-                  IRNode.AND_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_S,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_S) // does not vectorize for now, might in the future.
     private static short shortAndBig() {
         short acc = (short)0xFFFF; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -1280,13 +1090,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_S, IRNode.VECTOR_SIZE + "min(max_int, max_short)", "> 0",
-                  IRNode.OR_REDUCTION_V, "> 0",
-                  IRNode.OR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_S,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_S) // does not vectorize for now, might in the future.
     private static short shortOrBig() {
         short acc = 0; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -1297,13 +1101,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_S, IRNode.VECTOR_SIZE + "min(max_int, max_short)", "> 0",
-                  IRNode.XOR_REDUCTION_V, "> 0",
-                  IRNode.XOR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_S,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_S) // does not vectorize for now, might in the future.
     private static short shortXorBig() {
         short acc = 0; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -1336,13 +1134,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_S, IRNode.VECTOR_SIZE + "min(max_int, max_short)", "> 0",
-                  IRNode.MIN_REDUCTION_V, "> 0",
-                  IRNode.MIN_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_S,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_S) // does not vectorize for now, might in the future.
     private static short shortMinBig() {
         short acc = Short.MAX_VALUE; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -1353,13 +1145,7 @@ public class TestReductions {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_S, IRNode.VECTOR_SIZE + "min(max_int, max_short)", "> 0",
-                  IRNode.MAX_REDUCTION_V, "> 0",
-                  IRNode.MAX_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.LOAD_VECTOR_S,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
+    @IR(failOn = IRNode.LOAD_VECTOR_S) // does not vectorize for now, might in the future.
     private static short shortMaxBig() {
         short acc = Short.MIN_VALUE; // neutral element
         for (int i = 0; i < SIZE; i++) {
@@ -1374,7 +1160,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.AND_REDUCTION_V, "> 0",
                   IRNode.AND_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1391,7 +1177,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,  "> 0",
                   IRNode.OR_REDUCTION_V, "> 0",
                   IRNode.OR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1408,7 +1194,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.XOR_REDUCTION_V, "> 0",
                   IRNode.XOR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1425,7 +1211,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,    "> 0",
                   IRNode.ADD_REDUCTION_VI, "> 0",
                   IRNode.ADD_VI,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1442,7 +1228,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,    "> 0",
                   IRNode.MUL_REDUCTION_VI, "> 0",
                   IRNode.MUL_VI,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1459,7 +1245,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1476,7 +1262,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1494,7 +1280,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.AND_REDUCTION_V, "> 0",
                   IRNode.AND_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1511,7 +1297,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,  "> 0",
                   IRNode.OR_REDUCTION_V, "> 0",
                   IRNode.OR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1528,7 +1314,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.XOR_REDUCTION_V, "> 0",
                   IRNode.XOR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1545,7 +1331,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,    "> 0",
                   IRNode.ADD_REDUCTION_VI, "> 0",
                   IRNode.ADD_VI,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1562,7 +1348,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,    "> 0",
                   IRNode.MUL_REDUCTION_VI, "> 0",
                   IRNode.MUL_VI,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1579,7 +1365,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1596,7 +1382,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1614,7 +1400,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.AND_REDUCTION_V, "> 0",
                   IRNode.AND_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1631,7 +1417,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,  "> 0",
                   IRNode.OR_REDUCTION_V, "> 0",
                   IRNode.OR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1648,7 +1434,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.XOR_REDUCTION_V, "> 0",
                   IRNode.XOR_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1665,7 +1451,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,    "> 0",
                   IRNode.ADD_REDUCTION_VI, "> 0",
                   IRNode.ADD_VI,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1682,7 +1468,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,    "> 0",
                   IRNode.MUL_REDUCTION_VI, "> 0",
                   IRNode.MUL_VI,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1699,7 +1485,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1716,7 +1502,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_I,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VI,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_I,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1734,7 +1520,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,   "> 0",
                   IRNode.AND_REDUCTION_V, "> 0",
                   IRNode.AND_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1751,7 +1537,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,  "> 0",
                   IRNode.OR_REDUCTION_V, "> 0",
                   IRNode.OR_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1768,7 +1554,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,   "> 0",
                   IRNode.XOR_REDUCTION_V, "> 0",
                   IRNode.XOR_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1785,7 +1571,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,    "> 0",
                   IRNode.ADD_REDUCTION_VL, "> 0",
                   IRNode.ADD_VL,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -1802,7 +1588,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,    "> 0",
                   IRNode.MUL_REDUCTION_VL, "> 0",
                   IRNode.MUL_VL,           "> 0"}, // vector accumulator
-        applyIfCPUFeatureOr = {"avx512dq", "true", "sve", "true"},
+        applyIfCPUFeature = {"avx512dq", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
         applyIfCPUFeatureAnd = {"avx512dq", "false", "sse4.1", "true"})
@@ -1810,7 +1596,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,    "> 0",
                   IRNode.MUL_REDUCTION_VL, "> 0",
                   IRNode.MUL_VL,           "= 0"}, // Reduction NOT moved out of loop
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"},
+        applyIfCPUFeatureOr = {"asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     // Note: NEON does not support MulVL for auto vectorization. There is
     //       a scalarized implementation, but that is not profitable for
@@ -1833,7 +1619,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"avx512", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"avx512", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
         applyIfCPUFeatureAnd = {"avx512", "false", "avx2", "true"})
@@ -1853,7 +1639,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"avx512", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"avx512", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
         applyIfCPUFeatureAnd = {"avx512", "false", "avx2", "true"})
@@ -1874,10 +1660,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,   "> 0",
                   IRNode.AND_REDUCTION_V, "> 0",
                   IRNode.AND_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // While AndReductionV is implemented in NEON (see longAndSimple), MulVL is not.
     // Filed: JDK-8370686
     @IR(failOn = IRNode.LOAD_VECTOR_L,
@@ -1895,10 +1681,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,  "> 0",
                   IRNode.OR_REDUCTION_V, "> 0",
                   IRNode.OR_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // While OrReductionV is implemented in NEON (see longOrSimple), MulVL is not.
     // Filed: JDK-8370686
     @IR(failOn = IRNode.LOAD_VECTOR_L,
@@ -1916,10 +1702,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,   "> 0",
                   IRNode.XOR_REDUCTION_V, "> 0",
                   IRNode.XOR_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // While MaxReductionV is implemented in NEON (see longXorSimple), MulVL is not.
     // Filed: JDK-8370686
     @IR(failOn = IRNode.LOAD_VECTOR_L,
@@ -1937,10 +1723,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,    "> 0",
                   IRNode.ADD_REDUCTION_VL, "> 0",
                   IRNode.ADD_VL,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // While MaxReductionV is implemented in NEON (see longAddSimple), MulVL is not.
     // Filed: JDK-8370686
     @IR(failOn = IRNode.LOAD_VECTOR_L,
@@ -1958,13 +1744,13 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,    "> 0",
                   IRNode.MUL_REDUCTION_VL, "> 0",
                   IRNode.MUL_VL,           "> 0"},
-        applyIfCPUFeatureOr = {"avx512dq", "true", "sve", "true"},
+        applyIfCPUFeature = {"avx512dq", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
         applyIfCPUFeatureAnd = {"avx512dq", "false", "sse4.1", "true"})
     // I think this could vectorize, but currently does not. Filed: JDK-8370673
     @IR(failOn = IRNode.LOAD_VECTOR_L,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // MulVL is not implemented on NEON, so we also not have the reduction.
     // Filed: JDK-8370686
     @IR(failOn = IRNode.LOAD_VECTOR_L,
@@ -1982,13 +1768,13 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"avx512", "true", "sve", "true"},
+        applyIfCPUFeature = {"avx512", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
         applyIfCPUFeatureAnd = {"avx512", "false", "avx2", "true"})
     // I think this could vectorize, but currently does not. Filed: JDK-8370671
     @IR(failOn = IRNode.LOAD_VECTOR_L,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // While MaxReductionV is implemented in NEON (see longMinSimple), MulVL is not.
     // Filed: JDK-8370686
     @IR(failOn = IRNode.LOAD_VECTOR_L,
@@ -2006,13 +1792,13 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"avx512", "true", "sve", "true"},
+        applyIfCPUFeature = {"avx512", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
         applyIfCPUFeatureAnd = {"avx512", "false", "avx2", "true"})
     // I think this could vectorize, but currently does not. Filed: JDK-8370671
     @IR(failOn = IRNode.LOAD_VECTOR_L,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // While MaxReductionV is implemented in NEON (see longMaxSimple), MulVL is not.
     // Filed: JDK-8370686
     @IR(failOn = IRNode.LOAD_VECTOR_L,
@@ -2031,10 +1817,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,   "> 0",
                   IRNode.AND_REDUCTION_V, "> 0",
                   IRNode.AND_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // While AndReductionV is implemented in NEON (see longAndSimple), MulVL is not.
     // Filed: JDK-8370686
     @IR(failOn = IRNode.LOAD_VECTOR_L,
@@ -2052,10 +1838,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,  "> 0",
                   IRNode.OR_REDUCTION_V, "> 0",
                   IRNode.OR_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // While OrReductionV is implemented in NEON (see longOrSimple), MulVL is not.
     // Filed: JDK-8370686
     @IR(failOn = IRNode.LOAD_VECTOR_L,
@@ -2073,10 +1859,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,   "> 0",
                   IRNode.XOR_REDUCTION_V, "> 0",
                   IRNode.XOR_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // While MaxReductionV is implemented in NEON (see longXorSimple), MulVL is not.
     // Filed: JDK-8370686
     @IR(failOn = IRNode.LOAD_VECTOR_L,
@@ -2094,10 +1880,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,    "> 0",
                   IRNode.ADD_REDUCTION_VL, "> 0",
                   IRNode.ADD_VL,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // While MaxReductionV is implemented in NEON (see longAddSimple), MulVL is not.
     // Filed: JDK-8370686
     @IR(failOn = IRNode.LOAD_VECTOR_L,
@@ -2115,7 +1901,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,    "> 0",
                   IRNode.MUL_REDUCTION_VL, "> 0",
                   IRNode.MUL_VL,           "> 0"},
-        applyIfCPUFeatureOr = {"avx512dq", "true", "sve", "true"},
+        applyIfCPUFeature = {"avx512dq", "true"},
         applyIfAnd = {"AutoVectorizationOverrideProfitability", "> 0",
                       "LoopUnrollLimit", ">= 1000"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
@@ -2126,7 +1912,7 @@ public class TestReductions {
     // If you can eliminate this exception for LoopUnrollLimit, please remove
     // the flag completely from the test, also the "addFlags" at the top.
     @IR(failOn = IRNode.LOAD_VECTOR_L,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // MulVL is not implemented on NEON, so we also not have the reduction.
     // Filed: JDK-8370686
     @IR(failOn = IRNode.LOAD_VECTOR_L,
@@ -2144,13 +1930,13 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"avx512", "true", "sve", "true"},
+        applyIfCPUFeature = {"avx512", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
         applyIfCPUFeatureAnd = {"avx512", "false", "avx2", "true"})
     // I think this could vectorize, but currently does not. Filed: JDK-8370671
     @IR(failOn = IRNode.LOAD_VECTOR_L,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // While MaxReductionV is implemented in NEON (see longMinSimple), MulVL is not.
     // Filed: JDK-8370686
     @IR(failOn = IRNode.LOAD_VECTOR_L,
@@ -2168,13 +1954,13 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_L,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VL,          "> 0"},
-        applyIfCPUFeatureOr = {"avx512", "true", "sve", "true"},
+        applyIfCPUFeature = {"avx512", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_L,
         applyIfCPUFeatureAnd = {"avx512", "false", "avx2", "true"})
     // I think this could vectorize, but currently does not. Filed: JDK-8370671
     @IR(failOn = IRNode.LOAD_VECTOR_L,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // While MaxReductionV is implemented in NEON (see longMaxSimple), MulVL is not.
     // Filed: JDK-8370686
     @IR(failOn = IRNode.LOAD_VECTOR_L,
@@ -2193,10 +1979,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_F,   "> 0",
                   IRNode.ADD_REDUCTION_V, "> 0",
                   IRNode.ADD_VF,          "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "= 2"})
     @IR(failOn = IRNode.LOAD_VECTOR_F,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // I think this could vectorize, but currently does not. Filed: JDK-8370677
     // But: it is not clear that it would be profitable, given the sequential reduction.
     @IR(failOn = IRNode.LOAD_VECTOR_F,
@@ -2217,10 +2003,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_F,    "> 0",
                   IRNode.MUL_REDUCTION_VF, "> 0",
                   IRNode.MUL_VF,           "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "= 2"})
     @IR(failOn = IRNode.LOAD_VECTOR_F,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // I think this could vectorize, but currently does not. Filed: JDK-8370677
     // But: it is not clear that it would be profitable, given the sequential reduction.
     @IR(failOn = IRNode.LOAD_VECTOR_F,
@@ -2241,7 +2027,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_F,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VF,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_F,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2258,7 +2044,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_F,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VF,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_F,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2276,10 +2062,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_F,   "> 0",
                   IRNode.ADD_REDUCTION_V, "> 0",
                   IRNode.ADD_VF,          "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_F,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // I think this could vectorize, but currently does not. Filed: JDK-8370677
     // But: it is not clear that it would be profitable, given the sequential reduction.
     @IR(failOn = IRNode.LOAD_VECTOR_F,
@@ -2297,10 +2083,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_F,    "> 0",
                   IRNode.MUL_REDUCTION_VF, "> 0",
                   IRNode.MUL_VF,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_F,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // I think this could vectorize, but currently does not. Filed: JDK-8370677
     // But: it is not clear that it would be profitable, given the sequential reduction.
     @IR(failOn = IRNode.LOAD_VECTOR_F,
@@ -2318,7 +2104,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_F,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VF,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_F,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2335,7 +2121,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_F,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VF,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_F,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2353,10 +2139,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_F,   "> 0",
                   IRNode.ADD_REDUCTION_V, "> 0",
                   IRNode.ADD_VF,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_F,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // I think this could vectorize, but currently does not. Filed: JDK-8370677
     // But: it is not clear that it would be profitable, given the sequential reduction.
     @IR(failOn = IRNode.LOAD_VECTOR_F,
@@ -2374,10 +2160,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_F,    "> 0",
                   IRNode.MUL_REDUCTION_VF, "> 0",
                   IRNode.MUL_VF,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_F,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // I think this could vectorize, but currently does not. Filed: JDK-8370677
     // But: it is not clear that it would be profitable, given the sequential reduction.
     @IR(failOn = IRNode.LOAD_VECTOR_F,
@@ -2395,7 +2181,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_F,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VF,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_F,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2412,7 +2198,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_F,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VF,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_F,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2430,10 +2216,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_D,    "> 0",
                   IRNode.ADD_REDUCTION_VD, "> 0",
                   IRNode.ADD_VD,           "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "= 2"})
     @IR(failOn = IRNode.LOAD_VECTOR_D,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // I think this could vectorize, but currently does not. Filed: JDK-8370677
     // But: it is not clear that it would be profitable, given the sequential reduction.
     @IR(failOn = IRNode.LOAD_VECTOR_D,
@@ -2454,10 +2240,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_D,    "> 0",
                   IRNode.MUL_REDUCTION_VD, "> 0",
                   IRNode.MUL_VD,           "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "= 2"})
     @IR(failOn = IRNode.LOAD_VECTOR_D,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // I think this could vectorize, but currently does not. Filed: JDK-8370677
     // But: it is not clear that it would be profitable, given the sequential reduction.
     @IR(failOn = IRNode.LOAD_VECTOR_D,
@@ -2478,7 +2264,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_D,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VD,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_D,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2495,7 +2281,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_D,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VD,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_D,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2513,10 +2299,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_D,   "> 0",
                   IRNode.ADD_REDUCTION_V, "> 0",
                   IRNode.ADD_VD,          "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_D,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // I think this could vectorize, but currently does not. Filed: JDK-8370677
     // But: it is not clear that it would be profitable, given the sequential reduction.
     @IR(failOn = IRNode.LOAD_VECTOR_D,
@@ -2534,10 +2320,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_D,    "> 0",
                   IRNode.MUL_REDUCTION_VD, "> 0",
                   IRNode.MUL_VD,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_D,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // I think this could vectorize, but currently does not. Filed: JDK-8370677
     // But: it is not clear that it would be profitable, given the sequential reduction.
     @IR(failOn = IRNode.LOAD_VECTOR_D,
@@ -2555,7 +2341,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_D,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VD,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_D,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2572,7 +2358,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_D,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VD,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_D,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2590,10 +2376,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_D,   "> 0",
                   IRNode.ADD_REDUCTION_V, "> 0",
                   IRNode.ADD_VD,          "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_D,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // I think this could vectorize, but currently does not. Filed: JDK-8370677
     // But: it is not clear that it would be profitable, given the sequential reduction.
     @IR(failOn = IRNode.LOAD_VECTOR_D,
@@ -2611,10 +2397,10 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_D,    "> 0",
                   IRNode.MUL_REDUCTION_VD, "> 0",
                   IRNode.MUL_VD,           "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "sve", "true"},
+        applyIfCPUFeature = {"sse4.1", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_D,
-        applyIfCPUFeatureAnd = {"asimd", "true", "sve", "false"})
+        applyIfCPUFeatureAnd = {"asimd", "true"})
     // I think this could vectorize, but currently does not. Filed: JDK-8370677
     // But: it is not clear that it would be profitable, given the sequential reduction.
     @IR(failOn = IRNode.LOAD_VECTOR_D,
@@ -2632,7 +2418,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_D,   "> 0",
                   IRNode.MIN_REDUCTION_V, "> 0",
                   IRNode.MIN_VD,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_D,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2649,7 +2435,7 @@ public class TestReductions {
     @IR(counts = {IRNode.LOAD_VECTOR_D,   "> 0",
                   IRNode.MAX_REDUCTION_V, "> 0",
                   IRNode.MAX_VD,          "> 0"},
-        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true", "rvv", "true"},
+        applyIfCPUFeatureOr = {"avx", "true", "asimd", "true"},
         applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
     @IR(failOn = IRNode.LOAD_VECTOR_D,
         applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
@@ -2662,110 +2448,5 @@ public class TestReductions {
         return acc;
     }
 
-    // ---------float16***Simple ------------------------------------------------------------
-    @Test
-    @IR(counts = {IRNode.ADD_REDUCTION_VHF, "> 0"},
-        applyIfCPUFeature = {"sve", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(counts = {IRNode.ADD_REDUCTION_VHF, "> 0"},
-        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.ADD_REDUCTION_VHF,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
-    private static Float16 float16AddSimple() {
-        short acc = (short)0; // neutral element
-        for (int i = 0; i < SIZE; i++) {
-            acc = float16ToRawShortBits(add(shortBitsToFloat16(acc), shortBitsToFloat16(in1F16[i])));
-        }
-        return shortBitsToFloat16(acc);
-    }
-
-    @Test
-    @IR(counts = {IRNode.MUL_REDUCTION_VHF, "> 0"},
-        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"},
-        applyIfAnd = {"AutoVectorizationOverrideProfitability", "> 0", "MaxVectorSize", "<=16"})
-    @IR(failOn = IRNode.MUL_REDUCTION_VHF,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
-    private static Float16 float16MulSimple() {
-        short acc = floatToFloat16(1.0f); // neutral element
-        for (int i = 0; i < SIZE; i++) {
-            acc = float16ToRawShortBits(multiply(shortBitsToFloat16(acc), shortBitsToFloat16(in1F16[i])));
-        }
-        return shortBitsToFloat16(acc);
-    }
-
-    // ---------float16***DotProduct ------------------------------------------------------------
-    @Test
-    @IR(counts = {IRNode.ADD_REDUCTION_VHF, "> 0"},
-        applyIfCPUFeature = {"sve", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(counts = {IRNode.ADD_REDUCTION_VHF, "> 0"},
-        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.ADD_REDUCTION_VHF,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
-    private static Float16 float16AddDotProduct() {
-        short acc = (short)0; // neutral element
-        for (int i = 0; i < SIZE; i++) {
-            Float16 val = multiply(shortBitsToFloat16(in1F16[i]), shortBitsToFloat16(in2F16[i]));
-            acc = float16ToRawShortBits(add(shortBitsToFloat16(acc), val));
-        }
-        return shortBitsToFloat16(acc);
-    }
-
-    @Test
-    @IR(counts = {IRNode.MUL_REDUCTION_VHF, "> 0"},
-        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"},
-        applyIfAnd = {"AutoVectorizationOverrideProfitability", "> 0", "MaxVectorSize", "<=16"})
-    @IR(failOn = IRNode.MUL_REDUCTION_VHF,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
-    private static Float16 float16MulDotProduct() {
-        short acc = floatToFloat16(1.0f); // neutral element
-        for (int i = 0; i < SIZE; i++) {
-            Float16 val = multiply(shortBitsToFloat16(in1F16[i]), shortBitsToFloat16(in2F16[i]));
-            acc = float16ToRawShortBits(multiply(shortBitsToFloat16(acc), val));
-        }
-        return shortBitsToFloat16(acc);
-    }
-
-    // ---------float16***Big ------------------------------------------------------------
-    @Test
-    @IR(counts = {IRNode.ADD_REDUCTION_VHF, "> 0"},
-        applyIfCPUFeature = {"sve", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(counts = {IRNode.ADD_REDUCTION_VHF, "> 0"},
-        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"},
-        applyIf = {"AutoVectorizationOverrideProfitability", "> 0"})
-    @IR(failOn = IRNode.ADD_REDUCTION_VHF,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
-    private static Float16 float16AddBig() {
-        short acc = (short)0; // neutral element
-        for (int i = 0; i < SIZE; i++) {
-            Float16 a = shortBitsToFloat16(in1F16[i]);
-            Float16 b = shortBitsToFloat16(in2F16[i]);
-            Float16 c = shortBitsToFloat16(in3F16[i]);
-            Float16 val = add(multiply(a, b), add(multiply(a, c), multiply(b, c)));
-            acc = float16ToRawShortBits(add(shortBitsToFloat16(acc), val));
-        }
-        return shortBitsToFloat16(acc);
-    }
-
-    @Test
-    @IR(counts = {IRNode.MUL_REDUCTION_VHF, "> 0"},
-        applyIfCPUFeatureAnd = {"fphp", "true", "asimdhp", "true"},
-        applyIfAnd = {"AutoVectorizationOverrideProfitability", "> 0", "MaxVectorSize", "<=16"})
-    @IR(failOn = IRNode.MUL_REDUCTION_VHF,
-        applyIf = {"AutoVectorizationOverrideProfitability", "= 0"})
-    private static Float16 float16MulBig() {
-        short acc = floatToFloat16(1.0f); // neutral element
-        for (int i = 0; i < SIZE; i++) {
-            Float16 a = shortBitsToFloat16(in1F16[i]);
-            Float16 b = shortBitsToFloat16(in2F16[i]);
-            Float16 c = shortBitsToFloat16(in3F16[i]);
-            Float16 val = add(multiply(a, b), add(multiply(a, c), multiply(b, c)));
-            acc = float16ToRawShortBits(multiply(shortBitsToFloat16(acc), val));
-        }
-        return shortBitsToFloat16(acc);
-    }
 
 }
