@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2026, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -40,6 +40,7 @@
 import jdk.test.lib.Platform;
 import jdk.test.lib.process.ProcessTools;
 import jdk.test.lib.process.OutputAnalyzer;
+import jtreg.SkippedException;
 
 public class CompressedClassPointers {
 
@@ -217,6 +218,7 @@ public class CompressedClassPointers {
     public static void smallHeapTestNoCoop() throws Exception {
         ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(
             "-XX:-UseCompressedOops",
+            "-XX:+UseCompressedClassPointers",
             "-XX:+UnlockDiagnosticVMOptions",
             "-XX:SharedBaseAddress=8g",
             "-Xmx128m",
@@ -234,6 +236,7 @@ public class CompressedClassPointers {
     public static void smallHeapTestWith1GNoCoop() throws Exception {
         ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(
             "-XX:-UseCompressedOops",
+            "-XX:+UseCompressedClassPointers",
             "-XX:+UnlockDiagnosticVMOptions",
             "-XX:CompressedClassSpaceSize=1g",
             "-Xmx128m",
@@ -255,6 +258,7 @@ public class CompressedClassPointers {
     public static void largeHeapTestNoCoop() throws Exception {
         ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(
             "-XX:-UseCompressedOops",
+            "-XX:+UseCompressedClassPointers",
             "-XX:+UnlockDiagnosticVMOptions",
             "-XX:+UnlockExperimentalVMOptions",
             "-Xmx30g",
@@ -276,6 +280,7 @@ public class CompressedClassPointers {
     public static void largePagesTestNoCoop() throws Exception {
         ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(
             "-XX:-UseCompressedOops",
+            "-XX:+UseCompressedClassPointers",
             "-XX:+UnlockDiagnosticVMOptions",
             "-Xmx128m",
             "-XX:+UseLargePages",
@@ -286,10 +291,23 @@ public class CompressedClassPointers {
         output.shouldHaveExitValue(0);
     }
 
+    public static void heapBaseMinAddressTestNoCoop() throws Exception {
+        ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(
+            "-XX:-UseCompressedOops",
+            "-XX:+UseCompressedClassPointers",
+            "-XX:HeapBaseMinAddress=1m",
+            "-Xlog:gc+heap+coops=debug",
+            "-version");
+        OutputAnalyzer output = new OutputAnalyzer(pb.start());
+        output.shouldContain("HeapBaseMinAddress must be at least");
+        output.shouldHaveExitValue(0);
+    }
+
     public static void sharingTestNoCoop() throws Exception {
         // Test small heaps
         ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(
             "-XX:-UseCompressedOops",
+            "-XX:+UseCompressedClassPointers",
             "-XX:+UnlockDiagnosticVMOptions",
             "-XX:SharedArchiveFile=./CompressedClassPointers.jsa",
             "-Xmx128m",
@@ -307,6 +325,7 @@ public class CompressedClassPointers {
 
           pb = ProcessTools.createLimitedTestJavaProcessBuilder(
             "-XX:-UseCompressedOops",
+            "-XX:+UseCompressedClassPointers",
             "-XX:+UnlockDiagnosticVMOptions",
             "-XX:SharedArchiveFile=./CompressedClassPointers.jsa",
             "-Xmx128m",
@@ -337,6 +356,7 @@ public class CompressedClassPointers {
         smallHeapTestWith1GNoCoop();
         largeHeapTestNoCoop();
         largePagesTestNoCoop();
+        heapBaseMinAddressTestNoCoop();
         sharingTestNoCoop();
     }
 }
